[package]
name = "ld58"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = false
debug = false
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]

[dependencies.rkit]
git = "https://github.com/Nazariglez/rkit.git"
branch = "b017"
default-features = false
features = [
  "draw",
  "draw-default-font",
  "assets",
  "random",
  "logs",
  "postfx",
  "ui",
  "ecs",
  "audio",
  "save",
]
